--- a/images/templates/navbar.html
+++ b/images/templates/navbar.html
@@ -6,11 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
- <nav class="navbar navbar-inverse">
+ <nav class="navbar navbar-inverse fixed-top">
    <div class="container-fluid">
      <div class="navbar-header">
-       <a href="{% url 'imagesToday' %}" class="navbar-brand" >Gallery</a>
-     </div>
+        <a href="/" class="navbar-brand" >Home</a>
+      </div>
+      <div class="navbar-header">
+        <a href="{% url 'about' %}" class="navbar-brand" >Gallery</a>
+      </div>
+      <!-- adding a search form -->
+      <div class="col-sm-4 col-md-4 navbar-right">
+        <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search Cartegory/Location" name="image">
+            <div class="input-group-btn">
+              <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
+          </div>
+
+        </form>
+      </div>
+      <!-- end of search form-+ -->
+      
    </div>
  </nav>
 </body>
