--- a/images/templates/all-images/base.html
+++ b/images/templates/all-images/base.html
@@ -1,4 +1,5 @@
 {% load bootstrap3 %}
+{% load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,17 +12,27 @@
 
   {% block styles %}
   {% bootstrap_css %}
+   <!-- Compiled and minified CSS -->
+  
+   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <link rel="stylesheet" href="{% static 'css/baseimages.css' %}">
+  
   {% endblock %}
 </head>
 <body>
 {% include "navbar.html" %}
-{% block content %} <h1 class="text-center">Images for {{date|date:"l d-F Y"}}</h1>{% endblock %}
+{% block content%}
 
-
+{% endblock%}
 
 {% block scripts %}
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
      {% bootstrap_javascript %}
+
     {% endblock %}
   
 </body>
