--- a/images/templates/all-images/index.html
+++ b/images/templates/all-images/index.html
@@ -1,52 +1,36 @@
 {% extends 'all-images/base.html'%}
 {% block content %}
- <div class="buy">
- <h1 class="text-center">WELCOME TO THE BEST GALLERY</h1>
+ <div class="container-fluid">
+ <em><h1 class="text-center" style="font-weight:bolder; font-size:30px; font-family: fantasy;color: white;">WELCOME TO THE KAISER GALLERIA</h1></em>
+
+ 
+          {% for location in locations %}
+          <button class="btn btn-secondary"><a href="{% url 'filter_by_location' location.id  %}">{{location.name}}</a></button>
+          {% endfor %}
+        
  
  <div class="container">
   <div class="row">
-      <!-- Looping through images   -->
-      <div class="col-xs-12 col-sm-3">
-	        <div class="list-group">
-                <span href="" class="list-group-item active">
-                AVAILABLE CATEGORIES
-                </span>
-                <a  class="list-group-item">
-                    Landscape and photography
-                </a>
-                
-                <a href="" class="list-group-item">
-                    
-                </a>
-                <a href="" class="list-group-item">
-                    Motivation
-                </a>
-                <a href="" class="list-group-item">
-                Art
-                </a>
-                <a href="" class="list-group-item">
-                    Wildlife
-                </a>
-                <a class="list-group-item">
-                  Lifestyle
-                </a>
-                <a class="list-group-item">
-                  Music
-                </a>
-            </div><!-- /list-group -->      
-	    </div><!-- /col -->
+      <!-- Looping through images   -->      
+      </div>
+    </div>
+      
       {% for image in image %}
       
       <!-- displaying News articles -->
       <div class="col-md-4">
-        <img class="foto" data-toggle="modal" data-target="#myModal{{image.id}}" src="{{image.image.url}}" class="img-responsive"
-          width="500" height="400" alt="Image" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" >
+        <div>
+        <img class="foto" data-toggle="modal" data-target="#myModal{{image.id}}" src="{{image.image.url}}" class="img-rounded"
+          width="500" height="400" alt="Image" style="padding:8%;" >
+          
+         
+          </div>
   </div>
       
       <div class="modal" id="myModal{{image.id}}">
         <div class="modal-dialog">
           <div class="modal-content">
-            <h3 class="text-center">{{image.name}}</h3>
+            <h3 class="text-center" style="font-family:cursive; font-weight:bold;">{{image.name}}</h3>
   
             
             <div class="modal-header">
@@ -57,9 +41,10 @@
             <!-- Modal body -->
             <div class="modal-body">
               <h4 class="modal-title"><strong>Description:</strong> <em>{{ image.description}}</em></h4>
-              <p><strong>Posted:</strong> {{image.pub_date}}</p>
-              <p><Strong>Location:</Strong>{{ image.location}}</p>
-              <p><strong>Copy link</strong><a href="http://127.0.0.1:8000{{image.image.url}}" > http://127.0.0.1:8000{{image.image.url}}</a></p> <br>
+              <br>
+              <p><strong>Posted:</strong> {{image.pub_date}}</p> <br>
+              <p><Strong>Location:</Strong>{{ image.location}}</p> <hr>
+              <p><strong>Copy link</strong><a href="http://127.0.0.1:8000{{image.image.url}}" > http://127.0.0.1:8000{{image.image.url}}</a></p>
              
             </div>
   
@@ -78,14 +63,172 @@
       {% endfor %}
       
   
-    </div>
-  </div>
+ 
 </div>
-<style>
+
+<div class="footer container-fluid">
+  <hr>
+
+    <p class="text-center" style="font-size:18px; color: white;">
+      <small
+        >At <em>Kaiser Galleria</em>,We value your feedback and would like to
+        know how we can <br />
+        make your experience at our <br />
+        site more comfortable.</small
+      >
+    </p>
+    <h4 class="text-center" style="color:white;">
+      Reach our Team at: <a href="#"> kaisergalleria@gmail.com</a> <br />
+      Or call : +254717067453
+    </h4>
+
+    <ul>
+      <li>
+        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+      </li>
+    </ul>
+
+    <p class="text-center" style="color:white; font-size:19px;">copyright &copy;</p>
+  </div>
 
 
+  <style>
+      
 
-</style>
+      ul {
+        position: absolute;
+        /* top: 50%; */
+        left: 50%;
+        transform: translate(-50%, -50%);
+        margin-top: 7%;
+        padding: 0;
+        display: flex;
+      }
+      ul li {
+        list-style: none;
+        margin: 0 40px;
+      }
+      ul li .fa {
+        font-size: 40px;
+        color: #262626;
+        line-height: 80px;
+        transition: 0.5s;
+      }
+      ul li a {
+        position: relative;
+        display: block;
+        width: 80px;
+        height: 80px;
+        background-color: #fff;
+        text-align: center;
+        transform: perspective(100px) rotate(-30deg) skew(25deg) translate(0, 0);
+        transition: 0.5s;
+        box-shadow: -20px 20px 10px rgb(0, 0, 0, 0.5);
+      }
+      ul li a::before {
+        content: "";
+        position: absolute;
+        top: 10px;
+        left: -20px;
+        height: 100%;
+        width: 20px;
+        background: #b1b1b1;
+        transition: 0.5s;
+        transform: rotate(0deg) skewY(-45deg);
+      }
+      ul li a::after {
+        content: "";
+        position: absolute;
+        top: 80px;
+        left: -11px;
+        height: 20px;
+        width: 100%;
+        background: #b1b1b1;
+        transition: 0.5s;
+        transform: rotate(0deg) skewX(-45deg);
+      }
+      ul li a:hover {
+        transform: perspective(1000px) rotate(-30deg) skew(25deg)
+          translate(20px, -20px);
+        box-shadow: -50px 50px 50px rgb(0, 0, 0, 0.5);
+      }
+      ul li:hover .fa {
+        color: #fff;
+      }
+      ul li a:hover {
+        transform: perspective(1000px) rotate(-30deg) skew(25deg)
+          translate(20px, -20px);
+        box-shadow: -50px 50px 50px rgb(0, 0, 0, 0.5);
+      }
+      ul li:hover:nth-child(1) a {
+        background: #3b5999;
+      }
+
+      ul li:hover:nth-child(1) a:before {
+        background: #2e4a86;
+      }
+      ul li:hover:nth-child(1) a:after {
+        background: #4a69ad;
+      }
+      ul li:hover:nth-child(2) a {
+        background: #55acee;
+      }
+      ul li:hover:nth-child(2) a:before {
+        background: #4184b7;
+      }
+      ul li:hover:nth-child(2) a:after {
+        background: #4d9fde;
+      }
+      ul li:hover:nth-child(3) a {
+        background: #dd4b39;
+      }
+
+      ul li:hover:nth-child(3) a:before {
+        background: #c13929;
+      }
+      ul li:hover:nth-child(3) a:after {
+        background: #e83322;
+      }
+
+      ul li:hover:nth-child(4) a {
+        background: #0077b5;
+      }
+
+      ul li:hover:nth-child(4) a:before {
+        background: #036aa0;
+      }
+      ul li:hover:nth-child(4) a:after {
+        background: #0d82bf;
+      }
+
+      ul li:hover:nth-child(5) a {
+        background: linear-gradient(#400080, transparent),
+          linear-gradient(200deg, #d047d1, #ff0000, #ffff00);
+      }
+
+      ul li:hover:nth-child(5) a:before {
+        background: linear-gradient(#400080, transparent),
+          linear-gradient(200deg, #d047d1, #ff0000, #ffff00);
+      }
+      ul li:hover:nth-child(5) a:after {
+        background: linear-gradient(#400080, transparent),
+          linear-gradient(200deg, #d047d1, #ff0000, #ffff00);
+      }
+    </style>
+
+
 
   
  {% endblock %}
