--- a/images/templates/navbar.html
+++ b/images/templates/navbar.html
@@ -7,9 +7,10 @@
 </head>
 <body>
  <nav class="navbar navbar-inverse fixed-top">
-   <div class="container-fluid">
+   <div class="">
      <div class="navbar-header">
         <a href="/" class="navbar-brand" >Home</a>
+        
       </div>
       <div class="navbar-header">
         <a href="{% url 'about' %}" class="navbar-brand" >Gallery</a>
@@ -19,7 +20,7 @@
         <form class="navbar-form" role="search" action="{% url 'search_results' %}">
 
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search Cartegory/Location" name="image">
+            <input type="text" class="form-control" placeholder="Search Cartegory" name="image">
             <div class="input-group-btn">
               <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
